<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Heading: Enter Project Details -->
    <TextView
        android:id="@+id/text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_project_details"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- Project Name -->
    <EditText
        android:id="@+id/edit_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_heading"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_your_project_name"
        android:inputType="text"
        android:minHeight="56dp"
        android:required="true" />

    <!-- Project Description -->
    <EditText
        android:id="@+id/edit_project_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_project_name"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_your_project_description"
        android:inputType="textMultiLine"
        android:required="true"
        android:minLines="7"
        android:maxLines="20"
        android:maxLength="500" />

    <EditText
        android:id="@+id/edit_project_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_project_description"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_your_project_link"
        android:inputType="textUri"
        android:minHeight="56dp"
        android:required="false" />

    <EditText
        android:id="@+id/edit_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_project_link"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_date_dd_mm_yyyy"
        android:inputType="date"
        android:minHeight="56dp"
        android:required="true" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="111dp"
        android:layout_height="63dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:hint="@string/next"
        android:layout_marginBottom="16dp"
        android:text="@+id/btn_next" />

</RelativeLayout>
