<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/college_project_showcase"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_add_details"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/add_details"
        android:layout_below="@id/text_screen_name"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="150dp" />

    <Button
        android:id="@+id/btn_view_details"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/view_details"
        android:layout_below="@id/btn_add_details"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="100dp" />

</RelativeLayout>
